
--------------------------------------------------------------------------------
basic

   Float classs
      -- Only providing constructors for LCreal defined as double

   Number classs
      -- Only providing constructors for LCreal defined as double

   Rnd class
      1) Modified the following functions: drawClosed(), drawOpen(), drawHalfOpen(),
      drawRayleigh(), and drawHalfOpen53()

      2) Added the following functions: drawExponential(), drawGeometric(), drawUniformCont(),
      drawUniformDisc(), drawGauss(), drawBernoulli(), drawBinomial(), drawPoisson(),
      drawGamma() and drawErlang()

      3) Moved inline functions to new Rnd.inl file

--------------------------------------------------------------------------------
basicGL

   Graphic class
      1) processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

      2) Only provides the 'lc' functions for LCreal defined as double
      
   SymbolLoader
      -- various functions -- call Component::processComponents() instead of
      BaseClass::processComponents()

--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
simulation

   Navigation class
      -- Fixed bug in calculating navigation UTC time

   Player class
      1) processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

      2) initData() -- Player name defaults to nul string (e.g., "")

   Route class
      1) Fixed bug in insertSteerpoint concerning position datatype

      2) various functions -- call Component::processComponents() instead of
      BaseClass::processComponents()

   Steerpoint class
      -- processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

--------------------------------------------------------------------------------
